--- a/assets/css/virtual.css
+++ b/assets/css/virtual.css
@@ -1099,7 +1099,7 @@ a:hover, a:active {
     margin-right: 5px;
 }
 
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
     .gridder .grid-item,
     .gridder .grid-sizer {
         width: 50%;
@@ -1111,7 +1111,7 @@ a:hover, a:active {
     .gridder .grid-sizer {
         width: 33.33333%;
     }
-} */
+}
 
 
 /* Theme color style */
