--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -60,7 +60,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #3d3d3d;
+  background-color: #222224;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
