--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -206,7 +206,7 @@ nav ul.right {
 #nav-menu a {
   font-weight: 300;
   font-size: 26px;
-  color: #ffffff;
+  color: #ff96ff;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
 }
@@ -228,7 +228,7 @@ nav ul.right {
   height: 70px;
   max-height: 70px;
   margin: 0;
-  background: #f59ada;
+  background: #ffffff;
 }
 
 .sticky nav.transparent .navbar {
