--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -448,9 +448,11 @@ a.icon {
 /* Portfolio section styles
 /* ========================================== */
 #portfolio {
-  text-align: center;
-  padding-top: 3rem;
-  padding-bottom: 6rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 #portfolio img {
