--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -455,7 +455,7 @@ a.icon {
   padding-bottom: 4rem;
 }
 
-#portfolio img {
+/* #portfolio img {
   width: 100%;
 }
 
@@ -500,7 +500,7 @@ a.icon {
     text-align: center;
     text-decoration: none;
     margin-bottom: 4px;
-}
+} */
 
 /*filter css*/
 .filter-wrapper {
