--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -455,6 +455,13 @@ a.icon {
   padding-bottom: 4rem;
 }
 
+.wrapper{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #gamevideo{
   max-width: 320px;
 }
