--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -447,23 +447,25 @@ a.icon {
 
 /* Portfolio section styles
 /* ========================================== */
-#portfolio {
+/* #portfolio {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
+} */
 
 .wrapper{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: grid;
+  align-items: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 #gamevideo{
-  max-width: 320px;
+  max-width: 600px;
 }
 
 
