--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -462,6 +462,7 @@ a.icon {
   display: grid;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  padding-left: 30px;
 }
 
 #gamevideo{
