--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -456,13 +456,12 @@ a.icon {
 } */
 
 .wrapper{
-  margin: 0;
+  margin: 100px;
   padding: 0;
   box-sizing: border-box;
   display: grid;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  padding-left: 30px;
 }
 
 #gamevideo{
