--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -461,6 +461,7 @@ a.icon {
   box-sizing: border-box;
   display: grid;
   align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
   font-family: Arial, Helvetica, sans-serif;
 }
 
