--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -458,11 +458,9 @@ a.icon {
 .wrapper{
   margin: 100px;
   padding: 0;
-  box-sizing: border-box;
   display: grid;
   align-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  font-family: Arial, Helvetica, sans-serif;
+  grid-template-columns: auto auto auto auto;
 }
 
 .wrapper h2{
