--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -151,7 +151,7 @@ nav {
 }
 
 nav a {
-  color: #333333;
+  color: #ffffff;
 }
 
 .navbar {
@@ -402,6 +402,10 @@ a.icon {
   text-align: center;
   padding-top: 130px;
   padding-bottom: 100px;
+}
+
+#header h1{
+  color: ffffff;
 }
 
 #header .header-thumb {
