--- a/Projects/css/RTSStyle.css
+++ b/Projects/css/RTSStyle.css
@@ -9,7 +9,7 @@ http://www.tooplate.com/view/2082-pure-mix
 /* Body 
 ------------------------------------- */
 body {
-		background: #411f00;
+		background: #3a0000;
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -159,7 +159,7 @@ nav {
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
-  background-color: #5c0000;
+  background-color: #301300;
 }
 
 .brand {
@@ -172,7 +172,7 @@ nav {
   letter-spacing: 0.3rem;
 }
 .brand a {
-  color: #dd976e;
+  color: #d47a46;
   font-size: 24px;
   font-weight: 700;
   opacity: 1;
@@ -405,8 +405,8 @@ a.icon {
 }
 
 #header .header-thumb {
-  background: #9e5b0f;
-  border: 10px solid #551f00;
+  background: #d47a46;
+  border: 10px solid #3a0000;
   padding: 62px 20px 62px 20px;
 }
 
