--- a/Projects/css/BonAppMobileStyle.css
+++ b/Projects/css/BonAppMobileStyle.css
@@ -9,7 +9,7 @@ http://www.tooplate.com/view/2082-pure-mix
 /* Body 
 ------------------------------------- */
 body {
-		background: #5fbbf0;
+		background: #63bef3;
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 300;
