--- a/Projects/css/BonAppMobileStyle.css
+++ b/Projects/css/BonAppMobileStyle.css
@@ -9,7 +9,7 @@ http://www.tooplate.com/view/2082-pure-mix
 /* Body 
 ------------------------------------- */
 body {
-		background: #63bef3;
+		background: #98d9ff;
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -159,7 +159,7 @@ nav {
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
-  background-color: #ffe600;
+  background-color: #e7d59a;
 }
 
 .brand {
@@ -172,7 +172,7 @@ nav {
   letter-spacing: 0.3rem;
 }
 .brand a {
-  color: #960000;
+  color: #95f3ff;
   font-size: 24px;
   font-weight: 700;
   opacity: 1;
@@ -401,12 +401,12 @@ a.icon {
 }
 
 #header h1{
-  color: #960000;
+  color: #f8837b;
 }
 
 #header .header-thumb {
-  background: #ffe600;
-  border: 10px solid #960000;
+  background: #e7d59a;
+  border: 10px solid #f8837b;
   padding: 62px 20px 62px 20px;
 }
 
