--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -160,6 +160,7 @@ nav {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   background-color: #ffccf8;
+  border-bottom: 6px solid #df88eb;
 }
 
 .brand {
