--- a/Projects/css/StartfruitStyle.css
+++ b/Projects/css/StartfruitStyle.css
@@ -474,6 +474,10 @@ a.icon {
   color: black;
 }
 
+.wrapper p{
+  color: #1f1f1f;
+}
+
 .wrapper a{
   color: #4882ff;
   text-decoration: underline;
