--- a/Projects/css/RTSStyle.css
+++ b/Projects/css/RTSStyle.css
@@ -463,7 +463,7 @@ a.icon {
   align-items: center;
   grid-template-columns: auto auto auto auto;
   background-color: #d47a46;;
-  border: 10px solid #3a0000;
+  border: 10px solid #1b0b00;
 }
 
 .wrapper div{
