--- a/Projects/css/TwinStickStyle.css
+++ b/Projects/css/TwinStickStyle.css
@@ -160,7 +160,7 @@ nav {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   background-color: #720000;
-  border-bottom: 6px solid #0051ff;
+  border-bottom: 6px solid #550000;
 }
 
 .brand {
@@ -173,7 +173,7 @@ nav {
   letter-spacing: 0.3rem;
 }
 .brand a {
-  color: #0051ff;
+  color: #550000;
   font-size: 24px;
   font-weight: 700;
   opacity: 1;
@@ -402,12 +402,12 @@ a.icon {
 }
 
 #header h1{
-  color: #0051ff;
+  color: #550000;
 }
 
 #header .header-thumb {
   background: #720000;
-  border: 10px solid #0051ff;
+  border: 10px solid #550000;
   padding: 62px 20px 62px 20px;
 }
 
@@ -463,7 +463,7 @@ a.icon {
   align-items: center;
   grid-template-columns: auto auto auto auto;
   background-color: #720000;
-  border: 10px solid #0051ff;
+  border: 10px solid #550000;
 }
 
 .wrapper div{
