--- a/Projects/css/ChristmasArena.css
+++ b/Projects/css/ChristmasArena.css
@@ -9,7 +9,7 @@ http://www.tooplate.com/view/2082-pure-mix
 /* Body 
 ------------------------------------- */
 body {
-		background: #c5acff;
+		background: #005f10;
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -133,7 +133,7 @@ img {
 
 
 /* navigation styles
-/* ========================================================================================================================================================================================================================================== */
+/* ========================================== */
 .nav-container,
 nav {
   overflow: visible;
@@ -159,8 +159,8 @@ nav {
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
-  background-color: #ffccf8;
-  border-bottom: 6px solid #df88eb;
+  background-color: #005f10;
+  border-bottom: 6px solid #810000;
 }
 
 .brand {
@@ -173,7 +173,7 @@ nav {
   letter-spacing: 0.3rem;
 }
 .brand a {
-  color: #ffffff;
+  color: #810000;
   font-size: 24px;
   font-weight: 700;
   opacity: 1;
@@ -391,7 +391,7 @@ a.icon {
 }
 
 /* header section styles
-/* ========================================================================================================================================================================================================================================== */
+/* ========================================== */
 #header {
   -webkit-background-size: cover;
   background-size: cover;
@@ -402,12 +402,12 @@ a.icon {
 }
 
 #header h1{
-  color: #ffffff;
+  color: #380000;
 }
 
 #header .header-thumb {
-  background: #ffccf8;
-  border: 10px solid #df88eb;
+  background: #005f10;
+  border: 10px solid #810000;
   padding: 62px 20px 62px 20px;
 }
 
@@ -428,13 +428,13 @@ a.icon {
 }
 
 .header-one {
-  background: url('../images/Starfruit.PNG') no-repeat;
+  background: url('../images/ChristmasArena.PNG') no-repeat;
   height: 75vh !important;
   min-height: 520px;
   padding-top: 150px !important;
 }
 .header-two {
-  background: url('../images/Starfruit.PNG') no-repeat;
+  background: url('../images/ChristmasArena.PNG') no-repeat;
 }
 .header-three {
   background: url('../images/header-three-bg.jpg') no-repeat;
@@ -447,7 +447,7 @@ a.icon {
 }
 
 /* Portfolio section styles
-/* ========================================================================================================================================================================================================================================== */
+/* ============================================================================================================================================================================================================== */
 /* #portfolio {
   display: grid;
   align-items: center;
@@ -462,8 +462,8 @@ a.icon {
   display: grid;
   align-items: center;
   grid-template-columns: auto auto auto auto;
-  background-color: #ffccf8;
-  border: 10px solid #df88eb;
+  background-color: #005f10;;
+  border: 10px solid #810000;
 }
 
 .wrapper div{
@@ -471,15 +471,15 @@ a.icon {
 }
 
 .wrapper h2{
-  color: black;
+  color: #3a0000;
 }
 
 .wrapper p{
-  color: #1f1f1f;
+  color: #3a0000;
 }
 
 .wrapper a{
-  color: #4882ff;
+  color: #ffcd29;
   text-decoration: underline;
 }
 
@@ -487,34 +487,6 @@ a.icon {
   max-width: 750px;
 }
 
-/* code section styles
-/* ========================================================================================================================================================================================================================================== */
-
-.code{
-  margin: 100px;
-  padding: 0;
-  display: grid;
-  align-items: center;
-  grid-template-columns: auto auto auto auto;
-  background-color: #ffccf8;
-  border: 10px solid #df88eb;
-}
-
-.code dic{
-  margin:30px;
-}
-
-.code h2{
-  color: black;
-}
-
-.code p{
-  color: #1f1f1f;
-}
-
-.code image{
-  max-width: 600px;
-}
 
 /* #portfolio img {
   width: 100%;
