added and changed some pages

--- a/Projects/css/BonAppMobileStyle.css
+++ b/Projects/css/BonAppMobileStyle.css
@@ -484,6 +484,16 @@ a.icon {
   max-width: 750px;
 }
 
+.code{
+  margin: 100px;
+  padding: 0;
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto auto auto auto;
+  background-color: #ffccf8;
+  border: 10px solid #df88eb;
+}
+
 
 /* #portfolio img {
   width: 100%;
