--- a/Projects/css/RatraceStyle.css
+++ b/Projects/css/RatraceStyle.css
@@ -493,10 +493,25 @@ a.icon {
   display: grid;
   align-items: center;
   grid-template-columns: auto auto auto auto;
-  background-color: #ffccf8;
-  border: 10px solid #df88eb;
+  background-color: #945400;
+  border: 10px solid #693c00;
 }
 
+.code div{
+  margin:30px;
+}
+
+.code h2{
+  color: black;
+}
+
+.code p{
+  color: #1f1f1f;
+}
+
+.code image{
+  max-width: 600px;
+}
 
 /* #portfolio img {
   width: 100%;
