--- a/Projects/css/RandomMazeStyle.css
+++ b/Projects/css/RandomMazeStyle.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 h3 {
-  color: #444;
+  color: #ffffff;
   font-size: 14px;
   letter-spacing: 4px;
 }
@@ -58,7 +58,7 @@ h5 {
 }
 
 p {
-  color: #777;
+  color: #ffffff;
   font-size: 16px;
   line-height: 28px;
   word-spacing: 1px;
