and some more font colorx

--- a/Projects/css/RandomMazeStyle.css
+++ b/Projects/css/RandomMazeStyle.css
@@ -471,11 +471,11 @@ a.icon {
 }
 
 .wrapper h2{
-  color: #000000;
+  color: #ffffff;
 }
 
 .wrapper p{
-  color: #000000;
+  color: #ffffff;
 }
 
 .wrapper a{
