--- a/Projects/css/ChristmasArena.css
+++ b/Projects/css/ChristmasArena.css
@@ -464,11 +464,11 @@ a.icon {
 }
 
 .wrapper h2{
-  color: #3a0000;
+  color: #ffffff;
 }
 
 .wrapper p{
-  color: #3a0000;
+  color: #ffffff;
 }
 
 .wrapper a{
